--- a/app/angular/static/app/views/main.html
+++ b/app/angular/static/app/views/main.html
@@ -1,4 +1,4 @@
-<div class="jumbotron">
+<div class="panel">
   <h1>'Allo, 'Allo!</h1>
   <p class="lead">
     <img src="images/yeoman.png" alt="I'm Yeoman"><br>
