Some more foundation stuff added

--- a/app/angular/static/app/views/main.html
+++ b/app/angular/static/app/views/main.html
@@ -1,23 +1,24 @@
-<div class="panel">
-  <h1>'Allo, 'Allo!</h1>
+<h1>Planlos Bremen - Startseite</h1>
+<div class="panel radius">
   <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
+    Deine nächsten Termine:
   </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
+  <ul>
+    <li>1</li>
+    <li>2</li>
+    <li>3</li>
+  </ul>
+  <a href="#" class="button round">Neuen Termin anlegen</a>
 </div>
 
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
+<div class="panel radius">
+  <p class="lead">
+    Deine letzten Aktionen:
   </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+  <ul>
+    <li>1</li>
+    <li>2</li>
+    <li>3</li>
+  </ul>
 </div>
+
