First steps for the admin panel

--- a/app/angular/static/app/views/main.html
+++ b/app/angular/static/app/views/main.html
@@ -4,9 +4,9 @@
     Deine nächsten Termine:
   </p>
   <ul>
-    <li>1</li>
-    <li>2</li>
-    <li>3</li>
+    <li>Termin 1&nbsp;<a ng-href="#"><i class="fi-pencil"></i></a></li>
+    <li>Termin 2&nbsp;<a ng-href="#"><i class="fi-pencil"></i></a></li>
+    <li>Termin 3&nbsp;<a ng-href="#"><i class="fi-pencil"></i></a></li>
   </ul>
   <a href="#" class="button round">Neuen Termin anlegen</a>
 </div>
