--- a/app/angular/static/app/views/places.html
+++ b/app/angular/static/app/views/places.html
@@ -1,1 +1,16 @@
-<p>This is the places view.</p>
+<h1>Planlos Bremen - Veranstaltungsorte</h1>
+<div class="panel radius">
+  <p class="lead">
+    Die Liste der Veranstaltungsorte:
+  </p>
+  <ul>
+    <li>Ort 1&nbsp;<a ng-href="#"><i class="fi-pencil"></i></a></li>
+    <li>Ort 2&nbsp;<a ng-href="#"><i class="fi-pencil"></i></a></li>
+    <li>Ort 3&nbsp;<a ng-href="#"><i class="fi-pencil"></i></a></li>
+  </ul>
+  <a href="#" class="button round">Neuen Ort anlegen</a>
+</div>
+
+<div class="panel radius">
+  <iframe width="1200" height="700" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://www.openstreetmap.org/export/embed.html?bbox=8.67919921875%2C53.03729089162584%2C8.910598754882812%2C53.1132963107385&amp;layer=mapnik" style="border: 1px solid black"></iframe><br/><small><a href="http://www.openstreetmap.org/#map=13/53.0753/8.7949">Größere Karte anzeigen</a></small>
+</div>
