--- a/app/angular/static/app/views/tools.html
+++ b/app/angular/static/app/views/tools.html
@@ -1,1 +1,8 @@
-<p>This is the tools view.</p>
+<h1>Planlos Bremen - Tools</h1>
+<div class="panel radius">
+  <p class="lead">
+    Einige Tools:
+  </p>
+  <a href="#" class="button round">Daten aus Planlos importieren</a><br/>
+  <a href="#" class="button alert round">Daten Löschen</a>
+</div>
