--- a/app/angular/static/app/styles/_settings.scss
+++ b/app/angular/static/app/styles/_settings.scss
@@ -116,7 +116,7 @@ $row-width: 100%;
 // $black       : #000000;
 
 // We use these as default colors throughout
-// $primary-color: #008CBA;
+$primary-color: #88bfaf;
 // $secondary-color: #e7e7e7;
 // $alert-color: #f04124;
 // $success-color: #43AC6A;
