--- a/app/angular/static/app/views/dates.html
+++ b/app/angular/static/app/views/dates.html
@@ -1,1 +1,23 @@
-<p>This is the dates view.</p>
+<h1>Planlos Bremen - Termine</h1>
+<div class="panel radius">
+  <p class="lead">
+    Deine aktiven Termine:
+  </p>
+  <ul>
+    <li>Termin 1&nbsp;<a ng-href="#"><i class="fi-pencil"></i></a></li>
+    <li>Termin 2&nbsp;<a ng-href="#"><i class="fi-pencil"></i></a></li>
+    <li>Termin 3&nbsp;<a ng-href="#"><i class="fi-pencil"></i></a></li>
+  </ul>
+  <a href="#" class="button round">Neuen Termin anlegen</a>
+</div>
+
+<div class="panel radius">
+  <p class="lead">
+    Deine nicht aktiven Termine:
+  </p>
+  <ul>
+    <li>Termin 1&nbsp;<a ng-href="#"><i class="fi-pencil"></i></a></li>
+    <li>Termin 2&nbsp;<a ng-href="#"><i class="fi-pencil"></i></a></li>
+    <li>Termin 3&nbsp;<a ng-href="#"><i class="fi-pencil"></i></a></li>
+  </ul>
+</div>
