Changed Background, added favicon

--- a/app/angular/static/app/styles/_settings.scss
+++ b/app/angular/static/app/styles/_settings.scss
@@ -113,7 +113,7 @@ $font-family-sans-serif: "Economica", "Helvetica Neue", Helvetica, Roboto, Arial
 // $tuatara     : #444444;
 // $oil         : #333333;
 // $jet         : #222222;
-// $black       : #000000;
+$black       : #000000;
 
 // We use these as default colors throughout
 $primary-color: #88bfaf;
@@ -124,8 +124,8 @@ $primary-color: #88bfaf;
 // $info-color: #a0d3e8;
 
 // We use these to control various global styles
-// $body-bg: $white;
-// $body-font-color: $jet;
+$body-bg: #d9dcd4;
+$body-font-color: $black;
 $body-font-family: $font-family-sans-serif;
 // $body-font-weight: $font-weight-normal;
 // $body-font-style: normal;
