Added Date and Timepicker in create event view

--- a/app/angular/static/app/styles/main.scss
+++ b/app/angular/static/app/styles/main.scss
@@ -3,7 +3,8 @@
     "fonts",
     "settings",   // your custom _settings.scss file in app/styles directory
     "foundation-icons",   // your custom _settings.scss file in app/styles directory
-    "foundation"; // import from bower_components/foundation
+    "foundation", // import from bower_components/foundation
+    "melon.datepicker";
 
 .icon-bar-container{
   padding-left: 0;
