--- a/app/angular/static/app/styles/_settings.scss
+++ b/app/angular/static/app/styles/_settings.scss
@@ -151,8 +151,8 @@ $body-font-family: $font-family-sans-serif;
 // d. Media Query Ranges
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
-// $small-range: (0em, 40em);
-// $medium-range: (40.063em, 64em);
+$small-range: (0em, 50em);
+$medium-range: (50.063em, 64em);
 // $large-range: (64.063em, 90em);
 // $xlarge-range: (90.063em, 120em);
 // $xxlarge-range: (120.063em, 99999999em);
