--- a/app/angular/static/app/views/events.html
+++ b/app/angular/static/app/views/events.html
@@ -8,7 +8,7 @@
     <li>Termin 2&nbsp;<a ng-href="#"><i class="fi-pencil"></i></a></li>
     <li>Termin 3&nbsp;<a ng-href="#"><i class="fi-pencil"></i></a></li>
   </ul>
-  <a href="#" class="button round">Neuen Termin anlegen</a>
+  <a href="#/event" class="button round">Neuen Termin anlegen</a>
 </div>
 
 <div class="panel radius">
