Added rudimentary display of place

--- a/app/angular/static/app/views/places.html
+++ b/app/angular/static/app/views/places.html
@@ -4,7 +4,7 @@
     Die Liste der Veranstaltungsorte:
   </p>
   <ul >
-    <li ng-repeat="place in places">{{place.name}}, {{place.addr}}&nbsp;<a ng-href="#/place/{{place.id}"><i class="fi-pencil"></i></a></li>
+    <li ng-repeat="place in places">{{place.name}}, {{place.addr}}&nbsp;<a ng-href="#/place/{{place.id}}"><i class="fi-pencil"></i></a></li>
   </ul>
   <a href="#" class="button round">Neuen Ort anlegen</a>
 </div>
